--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smart_tv_app_2",
   "version": "0.0.0",
-  "author": "Hryhorii Chaikovskyi <hryhorii.chaikovskyi@gmail.com>, Andrei Visnakovs",
+  "author": "Hryhorii Chaikovskyi <hryhorii.chaikovskyi@gmail.com>, Andrei Visnakovs <andrei.visnakovs@gmail.com>",
   "react-tv": {
     "files": [
       "index.html",
